@@ -3,6 +3,8 @@
 Версия 2.0.6
 --------------
 2012-07-25 erra <erra@ya.ru>
+	* ircd/chkconf.c,ircd/ircd.c,ircd/s_user.c: вычищены неиспользуемые
+			переменные
 	* ircd/ircd.c: используем уникод, чтобы избежать применения шаблонов
 			побайтно, а не посимвольно
 	* ircd/s_auth.c: даём ircd шанс не застрять, когда застрял iauth
